--- a/app/index.html
+++ b/app/index.html
@@ -19,17 +19,16 @@
 
     <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
       <div class="w3-display-middle">
-        <h1 class="w3-jumbo w3-animate-top">Welcome to d3akash.cloud</h1>
+        <h1 class="w3-jumbo w3-animate-top w3-center">Welcome to d3akash.cloud</h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
-        <p class="w3-large w3-center">we are an independent provider on the <a href="https://akash.network/">Akash Network</a></p>
+        <p class="w3-large w3-center">a independent community provider on the <a href="https://akash.network/">Akash Network</a></p>
       </div>
       <div class="w3-display-bottomleft w3-padding-large">
-        Template by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+        <a href="legal.html" target="_self">Legal notice & terms</a>
       </div>
       <div class="w3-display-bottomright w3-padding-large">
         <a href="https://github.com/tombeynon/akash-hello-world">Do it yourself</a>
       </div>
-    </div>
-
+      </div>
   </body>
 </html>
