--- a/app/legal.html
+++ b/app/legal.html
@@ -27,6 +27,7 @@
         
         
         <h2>GTC - General Terms and Conditions</h2>
+        <p>d3akash.cloud is a akash.network service provider who is run as a private-lab-service that serves the akash community as primary test and verification service and for educational purposes. d3akash.cloud is not meant for production, mission critical or any other high available and high risk services. By using the d3akash.cloud provider with the akash network id akash1u5cdg7k3gl43mukca4aeultuz8x2j68mgwn28e you are accepting the following general terms and conditions.</p>
 
 <h3>1. Conclusion of the contract</h3>
 
