--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,23 @@
             
 
         </p>
+
+        <div class="w3-panel w3-card w3-light-grey">
+          <p>Use the following attributes in your deployment:</p>
+           <div class="w3-code notranslate">
+    
+            attributes:<br>
+              host: akash<br>
+              organization: d3akash.cloud<br>
+              tier: community<br>
+            signedBy:<br>
+              anyOf:<br>
+                - "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
+           </div>
+
+
+
+        </div>
       </div>
       <div class="w3-display-bottomleft w3-padding-large">
         <a href="legal.html" target="_self">Legal notice & terms</a>
