--- a/app/index.html
+++ b/app/index.html
@@ -51,13 +51,14 @@
           <p>Use the following attributes in your deployment:</p>
            <div class="w3-code notranslate">
     
-            attributes:<br>
-              host: akash<br>
-              organization: d3akash.cloud<br>
-              tier: community<br>
-            signedBy:<br>
-              anyOf:<br>
-                - "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
+            placement:<br>
+              dcloud:<br>
+                  host: akash<br>
+                  organization: d3akash.cloud<br>
+                  tier: community<br>
+                  signedBy:<br>
+                    anyOf:<br>
+                    - "akash1365yvmc4s7awdyj3n2sav7xfx76adc6dnmlx63"
            </div>
 
 
