Service Uptime, Email

--- a/app/index.html
+++ b/app/index.html
@@ -61,9 +61,8 @@
                     - "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
            </div>
 
-
-
         </div>
+        <div class="w3-center"><a href="https://stats.uptimerobot.com/3voJwHXZP6">Service uptime</a></div>
       </div>
       <div class="w3-display-bottomleft w3-padding-large">
         <a href="legal.html" target="_self">Legal notice & terms</a>
