--- a/app/legal.html
+++ b/app/legal.html
@@ -24,7 +24,7 @@
       </strong></p>
     <p>Hartmuth Gieldanowski<br />
       Sonnenweg 5b<br />4912 Aarwangen<br />Switzerland</p>
-    <p>E-Mail: lander-08.diets at icloud.com<br /></p>
+    <p>E-Mail: info@d3akash.cloud<br /></p>
     <p>
 
     <h3>Disclaimer</h3>
