--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
 
         </div>
         <br>      
-        <div class"w3-animate-opacity"><h2 class=" w3-center">Service Description</h2>
+        <div class="w3-animate-opacity"><h2 class="w3-center">Service Description</h2>
         <ul>
           <li>45 vCPU's, x64 AMD Ryzen 7</li>
           <li>NVMe SSDs</li>
