change to betteruptime

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
           <li>NVMe SSDs</li>
           <li>Static xDSL 500/100</li>
           <li>Monitored with passion and &#9749;</li>
-          <li><a href="https://stats.uptimerobot.com/3voJwHXZP6">Service uptime</a></li>
+          <li><a href="https://d3akash.betteruptime.com">Service uptime and scheduled maintenance</a></li>
         </ul>
       </div>
       
