--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
       <div class="w3-display-middle">
         <h1 class="w3-jumbo w3-animate-top w3-center">Welcome to d3akash.cloud</h1>
         <hr class="w3-border-grey" style="margin:auto;width:40%">
-        <p class="w3-large w3-center">a independent community provider on the <a href="https://akash.network/">Akash Network</a>
+      <div class="w3-display-container">  
+      <p class="w3-panel w3-center">a independent community provider on the <a href="https://akash.network/">Akash Network</a><br>
 
-          <svg width="300" height="152" viewBox="0 0 300 152" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="300" height="152" viewBox="0 0 300 152" fill="none" xmlns="http://www.w3.org/2000/svg" class="w3-center">
             <path d="M150.318 89.3329L156.178 80.6749H165.729L157.252 93.1832L165.996 106.271H156.452L150.318 97.0475V106.271H142.395V69.6201H150.318V89.3329Z" fill="white"/> <a href="https://akash.network/">
             <path d="M249.531 88.6341V106.264H241.615V88.8228C241.615 87.0479 240.155 85.5944 238.373 85.5944C236.576 85.5944 235.123 87.0479 235.123 88.8228V106.264H227.207V69.6201H235.123V81.4855C236.639 80.3605 238.513 79.6896 240.541 79.6896C245.51 79.6826 249.531 83.6867 249.531 88.6341Z" fill="white"/>
             <path d="M130.064 80.6755V81.9403C127.917 80.5567 125.355 79.7461 122.604 79.7461C114.997 79.7461 108.828 85.8884 108.828 93.4633C108.828 101.038 114.997 107.18 122.611 107.18C125.362 107.18 127.917 106.37 130.072 104.986V106.321H137.988V80.6755H130.064V80.6755ZM123.762 100.144C119.888 100.144 116.744 97.0131 116.744 93.1558C116.744 89.2985 119.888 86.1679 123.762 86.1679C127.636 86.1679 130.78 89.2985 130.78 93.1558C130.78 97.0131 127.643 100.144 123.762 100.144Z" fill="white"/>
@@ -43,8 +44,12 @@
             <path d="M134.085 53H134.967C136.355 53 137.024 52.3469 137.465 51.1878L141.514 40.7551H140.061L137.416 47.9388H137.318L134.689 40.7551H133.253L136.697 49.702L136.306 50.7306C136.028 51.4653 135.555 51.8245 134.722 51.8245H134.085V53Z" fill="white"/>
             </a> 
           </svg>
-    
-
+      <p class="w3-large w3-center">running on <a href="https://akash.praetorapp.com/auth/login">Praetor</a>
+      </div>
+          <div class="w3-center">
+           <a href="https://akash.praetorapp.com/auth/login"> <img src="images/edge_white_full.png" width="300" alt="Praetor Logo"></img>
+           </a>
+          </div>
         </p>
 
         <div class="w3-panel w3-card w3-light-grey">
@@ -58,7 +63,7 @@
                   tier: community<br>
                   signedBy:<br>
                     anyOf:<br>
-                    - "akash1nxq8gmsw2vlz3m68qvyvcf3kh6q269ajvqw6y0"
+                    - "akash1365yvmc4s7awdyj3n2sav7xfx76adc6dnmlx63"
            </div>
 
         </div>
