linkedin image update, url change

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <meta name="description" content="d3akash.cloud" />
+  <meta name="title" property="og:title" content="d3akash.cloud" />
+  <meta property="og:type" content="Website" />
+  <meta name="image" property="og:image" content="https://d3akash.cloud/images/articleheader.jpeg" />
+  <meta name="description" property="og:description" content="Website" /><meta name="author" content="Hartmuth Gieldanowski" />
   <style>
     body,h1, h2 {font-family: "Raleway", sans-serif}
     body, html {height: 100%}
@@ -73,7 +78,7 @@
           <li>NVMe SSDs</li>
           <li>Static xDSL 500/100</li>
           <li>Monitored with passion and &#9749;</li>
-          <li><a href="https://d3akash.betteruptime.com">Service uptime and scheduled maintenance</a></li>
+          <li><a href="https://status.d3akash.cloud">Service uptime and scheduled maintenance</a></li>
         </ul>
       </div>
       
